# bare-metal

./: .gitmodules  boot.ld  boot.s  readme.md  test.sh
bios/: boot.ld  boot.s  main.cc  test.sh
posix-uefi/: main.cc  posix-uefi-c++.patch  test.sh
uefi/: main  main.cc  meson.build  test.sh  x86_64-unknown-uefi.mesoncross
